tests/bad/dupfield1.tig
let
    type good = { x: int, y: int }
    var bad := good{x = 3, y = 3, x = 4}
in
    bad.x
end
